# AlphaNest

./: .env  .gitignore  AlphaNest-Whitepaper.md  BUSINESS_MODEL.md  CLOUDFLARE_DEPLOYMENT.md  DATA_SOURCE_AUDIT.md  DELETED_EVM_FILES.md  FUNCTIONAL_AVAILABILITY_REPORT.md  NEXT_STEPS.md  PAGE_ALIGNMENT_REPORT.md  PRD.md  PRODUCTION_DEPLOY_CHECKLIST.md  PUMP_FUN_BUSINESS_MODEL.md  PUMP_FUN_RUG_DETECTION.md  PopCow-Whitepaper.md  README.md  SECURITY_ALERT.md  SETUP_GUIDE.md  SOLANA_PUMP_FUN_ONLY.md  STAKING_PROFITABILITY.md  STAKING_PROFIT_GUARANTEE.md  STAKING_PROFIT_MECHANISM.md  TASKS.md  package-lock.json
.github/workflows/: README.md  ci.yml  deploy-dev.yml  deploy.yml
.kiro/specs/frontend-completion/: README.md  design.md  requirements.md  tasks.md
apps/api/: package-lock.json  package.json  seed.sql  vitest.config.ts  wrangler.toml
apps/api/migrations/: 0002_traders_and_copy_trades.sql  0003_referral_system.sql  0004_notifications.sql  0005_trading_bots.sql  0006_admin_system.sql
apps/api/src/: index.ts
apps/api/test/: health.test.ts  insurance.test.ts  user.test.ts  utils.ts
apps/telegram-bot/: package.json  wrangler.toml
apps/telegram-bot/src/: index.ts
apps/web/: .env.example  .env.production  .gitignore  COMPLETE_UPDATE_SUMMARY.md  FRONTEND_UPDATE_SUMMARY.md  README.md  netlify.toml  next.config.mjs  package-lock.json  package-lock.json.backup  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  wrangler.toml
apps/web/e2e/: devs.spec.ts  insurance.spec.ts  navigation.spec.ts  points.spec.ts  trade.spec.ts
apps/web/public/: _headers  _redirects  manifest.json  sw.js
apps/web/scripts/: generate-favicon-final.js  generate-favicon-simple.js  generate-favicon.js
apps/web/src/: instrumentation-client.ts
contracts/: .env.example  BSC_DEPLOY_GUIDE.md  COMPLETE_CONTRACTS_SUMMARY.md  DEPLOY_GUIDE.md  README.md  actuarial-model.md  foundry.toml
contracts/cache/: solidity-files-cache.json
contracts/evm/: hardhat.config.ts  package.json
contracts/evm/src/: CowGuardInsurance.sol  PopCowStaking.sol  PopCowToken.sol
contracts/script/: Deploy.s.sol  verify-bsc.sh  verify-sepolia.sh
contracts/solana/: ALL_PROGRAMS_CLOSED.md  AUTO_DEPLOY_STATUS.md  Anchor.toml  BUILD_FIX.md  BUILD_SUCCESS.md  CURRENT_STATUS.md  Cargo.toml  DEPLOYED_CONTRACTS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COST_EXPLANATION.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_PROGRESS.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_AFTER_RECOVER.md  DEPLOYMENT_STATUS_FINAL.md  DEPLOY_WITH_PREBUILT.md  DOCKER_BUILD_STATUS.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_OPTIMIZATION_STATUS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_RESULTS.md  QUICK_DEPLOY.md  README_DEPLOY.md  RECOVER_ANALYSIS.md  RECOVER_SOL_SUMMARY.md  create-wallet.js  deploy-all.sh  deploy-remaining.sh  deploy-soldev.sh  deploy-soldev.ts  deployment-status.txt  final-deploy.sh  generate-program-keys.js  prepare-deploy.sh  recover-and-redeploy.sh  update_program_ids.sh
contracts/solana/programs/cowguard-insurance/: Cargo.toml
contracts/solana/programs/cowguard-insurance/src/: lib.rs
contracts/solana/programs/governance/: Cargo.toml
contracts/solana/programs/governance/src/: lib.rs
contracts/solana/programs/multi-asset-staking/: Cargo.toml
contracts/solana/programs/multi-asset-staking/src/: lib.rs
contracts/solana/programs/points-system/: Cargo.toml
contracts/solana/programs/points-system/src/: lib.rs
contracts/solana/programs/popcow-token/: Cargo.toml
contracts/solana/programs/popcow-token/src/: lib.rs
contracts/solana/programs/referral-system/: Cargo.toml
contracts/solana/programs/referral-system/src/: lib.rs
contracts/solana/programs/reputation-registry/: Cargo.toml
contracts/solana/programs/reputation-registry/src/: lib.rs
contracts/solana/programs/staking/: Cargo.toml
contracts/solana/programs/staking/src/: lib.rs
contracts/solana/programs/token-vesting/: Cargo.toml
contracts/solana/programs/token-vesting/src/: lib.rs
contracts/solana/programs/yield-vault/: Cargo.toml
contracts/solana/programs/yield-vault/src/: lib.rs
contracts/solana/scripts/: initialize-insurance.ts  initialize-staking.ts
contracts/solana/tests/: staking.ts
contracts/src/: AlphaGuard.sol  AlphaGuardOracle.sol  AlphaNestCore.sol  AlphaToken.sol  CowGuardInsurance.sol  CrossChainVerifier.sol  MultiAssetStaking.sol  ReputationRegistry.sol  TokenFactory.sol
contracts/staking/: Anchor.toml
contracts/staking/scripts/: ADMIN_MANAGEMENT_SYSTEM.md  ADMIN_SYSTEM_COMPLETE.md  ALIGNMENT_COMPLETE.md  ALL_SYSTEMS_SUMMARY.md  APY_GUARANTEE_MECHANISM.md  BACKEND_INTEGRATION_COMPLETE.md  BUILD_ISSUE_RESOLUTION.md  BUILD_STATUS.md  COMPILATION_NEXT_STEPS.md  COMPLETE_CONTRACT_STATUS.md  COMPLETE_SYSTEM_STATUS.md  CONTRACT_STATUS.md  CURRENT_PROGRESS_SUMMARY.md  CURRENT_STATUS_AND_NEXT_STEPS.md  FINAL_ALIGNMENT_REPORT.md  FINAL_SUMMARY.md  FRONTEND_COMPLETENESS_REPORT.md  FUNDRAISING_PLAN.md  MULTI_ASSET_STAKING.md  MULTI_ASSET_STAKING_README.md  NEXT_STEPS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  POINTS_SYSTEM_DESIGN.md  (+24 more)
contracts/test/: AlphaGuard.t.sol  CowGuardInsurance.t.sol  MultiAssetStaking.t.sol
docs/: API_KEYS_GUIDE.md  AUTO_SETUP_GUIDE.md  CLOUDFLARE_PAGES_ENV.md  CONTRACT_ADMIN_GUIDE.md  CONTRACT_BUSINESS_LOGIC.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  ENGINEERING.md  GITHUB_ACTIONS_SETUP.md  MULTICHAIN_ROADMAP.md  QUICK_START.md  SOLANA_DEPLOYMENT_PLAN.md  SOLANA_YIELD_VAULT.md  TOKENOMICS.md  TOOLCHAIN_UPDATE.md  WHITEPAPER.md  defi-strategy.md
scripts/: configure-api-keys.sh  copy-paste-import.md  create-first-admin.sh  direct-import.js  gitbook-config.json  gitbook-import-checklist.md  gitbook-import-instructions.md  gitbook-manual-setup.md  one-click-setup.sh  quick-import-guide.md  quick-setup-secrets.sh  remove-env-from-git.sh  setup-github-actions.sh  setup-production.sh  sync-to-gitbook.js
subgraph/: package.json  schema.graphql  subgraph.yaml
subgraph/src/: alpha-guard.ts  oracle.ts
(+258 files in other folders)
