[workspace]
members = [
    "programs/popcow-token",
    "programs/cowguard-insurance",
    "programs/staking",
    "programs/token-vesting",
    "programs/yield-vault",
    "programs/multi-asset-staking",
    "programs/reputation-registry",
    "programs/governance",
    "programs/points-system",
    "programs/referral-system",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
