[package]
name = "cowguard_insurance"
version = "0.1.0"
description = "CowGuard Insurance program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cowguard_insurance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
