[package]
name = "governance"
version = "0.1.0"
description = "DAO governance program for PopCowDefi"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "governance"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
