[package]
name = "multi-asset-staking"
version = "0.1.0"
description = "Multi-asset staking program for PopCowDefi"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multi_asset_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
