[package]
name = "points-system"
version = "0.1.0"
description = "Points system using PopCowDefi token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "points_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
