[package]
name = "popcow_token"
version = "0.1.0"
description = "PopCow Token program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "popcow_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
