[package]
name = "referral-system"
version = "0.1.0"
description = "Multi-level referral system for PopCowDefi"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "referral_system"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
