[package]
name = "reputation-registry"
version = "0.1.0"
description = "Reputation registry for Dev scoring and verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
