[package]
name = "reputation-registry"
version = "0.1.0"
description = "Reputation registry for Dev scoring and verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation_registry"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
