[package]
name = "token-vesting"
version = "0.1.0"
description = "PopCow Token Vesting Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_vesting"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
