[package]
name = "yield-vault"
version = "0.1.0"
description = "PopCow Yield Vault - Smart Yield Aggregator for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yield_vault"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
